--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -1,2 +1,15 @@
 /* DESKTOP*/
-@media screen and (min-width: 1280px){}
+@media screen and (min-width: 1280px){
+  header {display: block; width: 300px; background-color: #ff9;}
+  #head {}
+  #head-logo {}
+  #head-menu {}
+  #menu-about {}
+  #menu-about-btn {}
+  #menu-markuplan {}
+  #menu-markuplan-btn {}
+  #menu-study {}
+  #menu-study-btn {}
+  #menu-contact {}
+  #menu-contact-btn {}
+}
