--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -1,6 +1,6 @@
 /* DESKTOP*/
 @media screen and (min-width: 1280px){
-  header {display: block; width: 300px; background-color: #ff9;}
+  header {display: block; width: 300px; height: 100vh; background-color: #ff9;}
   #head {}
   #head-logo {}
   #head-menu {}
