--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -1,6 +1,6 @@
 /* DESKTOP*/
 @media screen and (min-width: 1280px){
-  header {display: block; width: 300px; height: 100vh; background-color: #ff9;}
+  header {display: block; position: fixed; top: 0; right: 0; width: 300px; height: 100vh; background-color: #ff9;}
   #head {}
   #head-logo {display: block; width: 200px; height: 120px; background-color: #fff; font-size: 20px;}
   #head-menu {}
