--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -2,7 +2,7 @@
 @media screen and (min-width: 1280px){
   header {display: block; position: fixed; top: 0; right: 0; width: 300px; height: 100vh; background-color: #ff9;}
   #head {display: block; position: relative; width: 100%; height: 100%;}
-  #head-logo {display: block; position: absolute; top: 20px; left:50px;  width: 200px; height: 120px; background-color: #fff; font-size: 20px;}
+  #head-logo {display: block; position: absolute; top: 20px; left:50px;  width: 200px; height: 120px; background-color: #fff; font-size: 20px; line-height: 120px; text-align: center;}
   #head-menu {}
   #menu-about {}
   #menu-about-btn {}
