--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -2,12 +2,16 @@
 @media screen and (min-width: 1280px){
   header {display: block; position: fixed; top: 0; left: 0; width: 50vw; height: 100vh; background-color: #ff9;}
   #head {display: block; position: relative; width: 100%; height: 100%;}
-  #head-logo {display: block; position: absolute; top: calc(50%-60px); left: calc(50%-100px);  width: 200px; height: 120px; background-color: #fff; font-size: 20px; font-weight: bold; line-height: 120px; text-align: center;}
+  #head-logo {display: block; position: absolute; margin-top: calc(50%-60px); margin-left: calc(50%-100px);  width: 200px; height: 120px; background-color: #fff; font-size: 20px; font-weight: bold; line-height: 120px; text-align: center;}
   #head-menu {}
   #menu-about {}
   #menu-about-btn {}
-  #menu-markuplan {}
-  #menu-markuplan-btn {}
+  #menu-html {}
+  #menu-html-btn {}
+  #menu-css {}
+  #menu-css-btn {}
+  #menu-js {}
+  #menu-js-btn {}
   #menu-study {}
   #menu-study-btn {}
   #menu-contact {}
