--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -1,7 +1,7 @@
 /* DESKTOP*/
 @media screen and (min-width: 1280px){
   header {display: block; position: fixed; top: 0; left: 0; width: 50vw; height: 100vh; background-color: #ff9;}
-  #head {display: block; position: relative; width: 100%; height: 100%;}
+  #head-l {display: block; position: relative; width: 100%; height: 100%;}
   #head-logo {display: block; position: absolute; top: calc(50% - 60px); left: calc(50% - 100px);  width: 200px; height: 120px; background-color: #fff; font-size: 20px; font-weight: bold; line-height: 120px; text-align: center;}
   #head-menu {}
   #menu-about {}
@@ -16,4 +16,6 @@
   #menu-study-btn {}
   #menu-contact {}
   #menu-contact-btn {}
+  
+  #head-r {display: block; position: absolute; top: 0; right: 0; width: 50vw; height: 100vh; background-color: #f99;}
 }
