--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -18,4 +18,16 @@
   #menu-contact-btn {}
   
   #head-r {display: block; position: fixed; top: 0; right: 0; width: 50vw; height: 100vh; background-color: #f99;}
+  #main-menu {display: block; width: 100%; height: 100%;}
+  #main-about {display: block; width: 100%; height: 20%; background-color: #99f;}
+  #main-about-btn {}
+  #main-html {display: block; width: 100%; height: 20%; background-color: #9f9;}
+  #main-html-btn {}
+  #main-css {display: block; width: 100%; height: 20%; background-color: #9ff;}
+  #main-css-btn {}
+  #main-js {display: block; width: 100%; height: 20%; background-color: #f9f;}
+  #main-js-btn {}
+  #main-study {display: block; width: 100%; height: 20%; background-color: #ff9;}
+  #main-study-btn {}
+
 }
