--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -20,15 +20,15 @@
   #head-r {display: block; position: fixed; top: 0; right: 0; width: 50vw; height: 100vh; background-color: #f99;}
   #main-menu {display: block; width: 100%; height: 100%;}
   #main-about {display: block; width: 100%; height: 20%; background-color: #99f; text-align: center;}
-  #main-about-btn {}
+  #main-about-btn {display: block; width: 100%; height: 100%;}
   #main-html {display: block; width: 100%; height: 20%; background-color: #9f9; text-align: center;}
-  #main-html-btn {}
+  #main-html-btn {display: block; width: 100%; height: 100%;}
   #main-css {display: block; width: 100%; height: 20%; background-color: #9ff; text-align: center;}
-  #main-css-btn {}
+  #main-css-btn {display: block; width: 100%; height: 100%;}
   #main-js {display: block; width: 100%; height: 20%; background-color: #f9f; text-align: center;}
-  #main-js-btn {}
+  #main-js-btn {display: block; width: 100%; height: 100%;}
   #main-study {display: block; width: 100%; height: 20%; background-color: #ff9; text-align: center;}
-  #main-study-btn {}
+  #main-study-btn {display: block; width: 100%; height: 100%;}
   .btn-title {font-size: 20px;}
   .btn-sub {font-size: 12px;}
 
