--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -29,7 +29,7 @@
   #main-js-btn {display: block; width: 100%; height: 100%;}
   #main-study {display: block; width: 100%; height: 20%; background-color: #ff9; text-align: center;}
   #main-study-btn {display: block; width: 100%; height: 100%;}
-  .btn-title {font-size: 20px; width: 100%; height: 50%;}
+  .btn-title {font-size: 20px; width: 100%; height: 50%; line-height: 90%;}
   .btn-sub {font-size: 12px; width: 100%; height: 50%;}
 
 }
