--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -3,7 +3,7 @@
   header {display: block; position: fixed; top: 0; left: 0; width: 50vw; height: 100vh; background-color: #ff9;}
   #head-l {display: block; position: relative; width: 100%; height: 100%;}
   #head-logo {display: block; position: absolute; top: calc(50% - 60px); left: calc(50% - 100px);  width: 200px; height: 120px; background-color: #fff; font-size: 20px; font-weight: bold; line-height: 120px; text-align: center;}
-  #head-menu {}
+  #head-menu {display: none;}
   #menu-about {}
   #menu-about-btn {}
   #menu-html {}
