--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -31,6 +31,6 @@
   #main-study-btn {display: block; width: 100%; height: 100%;}
   .btn-title {font-size: 40px; width: 100%; height: 50%; line-height: 16vh;}
   .btn-sub {font-size: 12px; width: 100%; height: 8vh;}
-  .btn-title span {display: inline-block; width: 40px; height: 40px; background-color: #000;}
+  .btn-title span {display: inline-block; width: 36px; height: 36px; margin-top: 4px; margin-right: 10px; background-color: #000;}
 
 }
