--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -29,9 +29,9 @@
   #main-js-btn {display: block; width: 100%; height: 100%;}
   #main-study {display: block; width: 100%; height: 20%; background-color: #ff9; text-align: center;}
   #main-study-btn {display: block; width: 100%; height: 100%;}
-  .btn-title {font-size: 32px; font-weight: bold; display: block; width: 100%; height: 50%; line-height: 16vh; color: #fff; z-index: 1;}
-  .btn-sub {font-size: 12px; display: block; width: 100%; height: 50%; line-height: 7vh; color: #fff; z-index: 1;}
+  .btn-title {font-size: 32px; font-weight: bold; width: 100%; height: 50%; line-height: 16vh; color: #fff; z-index: 1;}
+  .btn-sub {font-size: 12px; width: 100%; height: 50%; line-height: 7vh; color: #fff; z-index: 1;}
   .btn-title span.btn-img {display: inline-block; width: 36px; height: 36px; margin-bottom: -6px; margin-right: 10px; background-color: #000;}
   .btn-title span.btn-title {}
-  .black-bg {display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #000; opacity: 0.3; z-index: -1;}
+  .black-bg {display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #000; opacity: 0.3;}
 }
