--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -31,7 +31,7 @@
   #main-study-btn {display: block; width: 100%; height: 100%;}
   .btn-title {font-size: 32px; font-weight: bold; width: 100%; height: 50%; line-height: 16vh; color: #fff;}
   .btn-sub {font-size: 12px; width: 100%; height: 50%; line-height: 7vh; color: #fff;}
-  .btn-title span.btn-img {display: inline-block; width: 36px; height: 36px; margin-bottom: -6px; margin-right: 10px; background-color: #000;}
-  .btn-title span.btn-title {display: inline-block;}
+  .btn-title span.btn-img-span {display: inline-block; width: 36px; height: 36px; margin-bottom: -6px; margin-right: 10px; background-color: #000;}
+  .btn-title span.btn-title-span {display: inline-block;}
   .black-bg {display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #000; opacity: 0.3;}
 }
