--- a/works/publisherw/css/index_d.css
+++ b/works/publisherw/css/index_d.css
@@ -29,8 +29,8 @@
   #main-js-btn {display: block; width: 100%; height: 100%;}
   #main-study {display: block; position: relative; width: 100%; height: 20%; background-color: #ff9; text-align: center;}
   #main-study-btn {display: block; width: 100%; height: 100%;}
-  .btn-title {font-size: 32px; font-weight: bold; width: 100%; height: 50%; line-height: 16vh; color: #fff;}
-  .btn-sub {font-size: 12px; width: 100%; height: 50%; line-height: 7vh; color: #fff;}
+  .btn-title {display: block; position: absolute; font-size: 32px; font-weight: bold; width: 100%; height: 50%; line-height: 16vh; color: #fff;}
+  .btn-sub {display: block; position: absolute; top: 50%; font-size: 12px; width: 100%; height: 50%; line-height: 7vh; color: #fff;}
   .btn-title span.btn-img-span {display: inline-block; width: 36px; height: 36px; margin-bottom: -6px; margin-right: 10px; background-color: #000;}
   .btn-title span.btn-title-span {display: inline-block;}
   .black-bg {display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #000; opacity: 0.3;}
