--- a/css/test.css
+++ b/css/test.css
@@ -1,3 +1,4 @@
 body{display: block; width: 100vw; height: 100vh;}
+iframe {border: 1px solid #000;}
 .gotodocx {display: block; width: 100%; height:4%; line-height: 200%; text-align: center;}
-.gotodocx a {display: block; width: 100%; height: 100%;}
+.gotodocx a {display: block; width: 100%; height: 100%; background-color: #99f}
