--- a/css/test.css
+++ b/css/test.css
@@ -1,4 +1,3 @@
-body{display: block; width: 100vw; height: 100vh;}
-iframe {border: 1px solid #000;}
+body{display: block; width: 100vw; height: 100vh; overflow: hidden;}
 .gotodocx {display: block; width: 100%; height:4%; line-height: 200%; text-align: center; background-color: #99f;}
 .gotodocx a {display: block; width: 100%; height: 100%; }
