--- a/css/test.css
+++ b/css/test.css
@@ -1,3 +1,3 @@
 body{display: block; width: 100vw; height: 100vh;}
-.gotodocx {display: block; width: 100%; height:4%; line-height: 200%; text-align: center;}
+.gotodocx {display: none; width: 100%; height:4%; line-height: 200%; text-align: center;}
 .gotodocx a {display: block; width: 100%; height: 100%; background-color: #99f;}
