--- a/css/index_d.css
+++ b/css/index_d.css
@@ -1,6 +1,6 @@
 /* DESKTOP*/
 @media screen and (min-width: 768px){
-body {width: 100%; height: 100vh;  overflow: hidden;}
+body {width: 100%; height: 100%;  overflow: hidden;}
 
 .header {width: 100%;}
 
