--- a/css/index_m.css
+++ b/css/index_m.css
@@ -1,8 +1,7 @@
 /* MOBILE */
 @media screen and (max-width: 767px){
-    body {width: 100%; min-width: 320px; height: 100vh; background-color:#fff; overflow: hidden;}
+    body {width: 100%; min-width: 320px; height: 100%; background-color:#fff; overflow: hidden;}
 
-    .header {width: 100%;}
 
     .content {display: block; position: absolute; left: 0; width: 100%; height: calc(100% - 62px);}
     .scr-main {display: block; width: 100%; height: 100%; position: absolute; top: 0; left: 0;}
