--- a/css/index_d.css
+++ b/css/index_d.css
@@ -21,7 +21,7 @@ body {width: 100%; height: 100%;  overflow: hidden;}
 
 
 
-.footer {width: 100%; height: 62px; position: fixed; bottom: 0; left: 0; border-top: 2px solid #eeeeee;}
+.footer {display: block; width: 100%; height: 62px; position: fixed; bottom: 0; left: 0; border-top: 2px solid #eeeeee;}
 .footer-menu {display: block; width: 100%; height: 100%;}
 .menu-btn {display: block; width: calc(25% - 2px); height: 100%; position: relative; float: left; text-align: center; padding-top:10px; border-right: 2px solid #dddddd; font-size: 14px; background-color: #efefef; }
 .menu-btn:first-child { line-height: 40px;}
