--- a/css/index_d.css
+++ b/css/index_d.css
@@ -1,10 +1,10 @@
 /* DESKTOP*/
 @media screen and (min-width: 768px){
-body {width: 100%; height: 100%;  overflow: hidden;}
+body {width: 100vw; height: 100vh;  overflow: hidden;}
 
 .header {width: 100%;}
 
-.content {display: block; position: absolute; left: 0; width: 100%; height: calc(100% - 62px); overflow: hidden;}
+.content {display: block; position: absolute; left: 0; width: 100vw; height: calc(100% - 62px); overflow: hidden;}
 .scr-main {display: block; width: 100%; height: 100%; position: absolute; top: 0; left: 0;}
 .scr1 {display: block; width: 100%; height: 100%; background-color: #fff; position: absolute; top: 0; left: 0;}
 .scr1-box {display: block; width: 86%; margin-left: 7%; margin-right: 7%; padding: 20px 0; overflow-y: auto;}
