--- a/css/index_m.css
+++ b/css/index_m.css
@@ -1,6 +1,6 @@
 /* MOBILE */
 @media screen and (max-width: 767px){
-    body {width: 100%; min-width: 320px; height: 100%; background-color:#fff; overflow: hidden;}
+    body {width: 100vw; min-width: 320px; height: 100vh; background-color:#fff; overflow: hidden;}
 
 
     .content {display: block; position: absolute; left: 0; width: 100%; height: calc(100% - 62px);}
