--- a/css/index_m.css
+++ b/css/index_m.css
@@ -3,7 +3,7 @@
     body {width: 100vw; min-width: 320px; height: 100vh; background-color:#fff; overflow: hidden;}
 
 
-    .content {display: block; position: absolute; left: 0; width: 100%; height: calc(100% - 62px);}
+    .content {display: block; position: absolute; left: 0; width: 100vw; height: calc(100% - 62px); overflow: hidden;}
     .scr-main {display: block; width: 100%; height: 100%; position: absolute; top: 0; left: 0;}
     .scr1 {display: block; width: 100%; height: 100%; background-color: #fff; position: absolute; top: 0; left: 0;}
     .scr1-box {display: block; width: 86%; margin-left: 7%; margin-right: 7%; padding: 20px 0; overflow-y: auto;}
@@ -20,7 +20,7 @@
 
 
 
-    .footer {display: block; width: 100%; height: 62px; position: fixed; bottom: 0; left: 0; border-top: 2px solid #eeeeee;}
+    .footer {display: block; width: 100vw; height: 62px; position: fixed; bottom: 0; left: 0; border-top: 2px solid #eeeeee;}
     .footer-menu {display: block; width: 100%; height: 100%;}
     .menu-btn {display: block; width: calc(25% - 2px); height: 100%; position: relative; float: left; text-align: center; padding-top:10px; border-right: 2px solid #dddddd; font-size: 14px; background-color: #efefef; }
     .menu-btn:first-child { line-height: 40px;}
