--- a/css/index_m.css
+++ b/css/index_m.css
@@ -15,14 +15,14 @@
     .scr2 {display: block; width: 100%; height: 100%; background-color: #fff; position: absolute; top: 0; left: 100%;}
     .scr2 iframe {width: 100%; height: 100%;}
 
-    .scr3 {display: block; width: 100%; height: 100%; background-color: #fff; position: absolute; top: 0; left: 200%;}
-    .scr3 iframe {width: 90%; height: calc(100% - 70px);}
+    .scr3 {display: block; width: 100%; height: calc(100% - 62px); background-color: #fff; position: absolute; top: 0; left: 200%;}
+    .scr3 iframe {width: 100%; height: 100%;}
 
 
 
     .footer {display: block; width: 100vw; height: 62px; position: fixed; bottom: 0; left: 0; border-top: 2px solid #eeeeee;}
     .footer-menu {display: block; width: 100%; height: 100%;}
-    .menu-btn {display: block; width: calc(25% - 2px); height: 100%; position: relative; float: left; text-align: center; padding-top:10px; border-right: 2px solid #dddddd; font-size: 14px; background-color: #efefef; }
+    .menu-btn {display: block; width: calc(25% - 2px); height: 100%; position: relative; float: left; text-align: center; padding-top:8px; border-right: 2px solid #dddddd; font-size: 14px; background-color: #efefef; }
     .menu-btn:first-child { line-height: 40px;}
     .menu-btn:last-child {width: 25%; border: none;}
     .btnsel {background-color: #fff;}
