--- a/css/index_m.css
+++ b/css/index_m.css
@@ -15,7 +15,7 @@
     .scr2 {display: block; width: 100%; height: 100%; background-color: #fff; position: absolute; top: 0; left: 100%;}
     .scr2 iframe {width: 100%; height: 100%;}
 
-    .scr3 {display: block; width: 100%; height: calc(100% - 62px); background-color: #fff; position: absolute; top: 0; left: 200%;}
+    .scr3 {display: block; width: 100%; height: 100%; background-color: #fff; position: absolute; top: 0; left: 200%;}
     .scr3 iframe {width: 100%; height: 100%;}
 
 
